--- a/index.css
+++ b/index.css
@@ -299,16 +299,13 @@ footer a {
 }
 
 .quick-link-card {
-  display: flex;
   flex-direction: column;
   width: 17em;
-  height: 18em;
+  height: auto;
   padding-left: 1.5em;
+  padding-right: 1.5em;
   margin: 1em;
-}
-
-.quick-link-card h3 {
-  margin-bottom: 0;
+  text-align: center;
 }
 
 .quick-link-card ul {
